@@ -126,6 +126,9 @@
 #
 # History:
 #
+# 04/03/2012
+#	- TR 11030/prevent use of GO:0005488 in IEA
+#
 # 03/01/2012	lec
 #	- TR 10950/spkw2go/SP_KW changed to uniprotkb_kw2go/UniProtKB-KW
 #
@@ -809,7 +812,8 @@ def processEC2GO():
 	        continue
 
 	    # if the go id = GO:0005515, then skip it
-	    if goid in ('GO:0005515'):
+	    # if the go id = GO:0005488, then skip it
+	    if goid in ('GO:0005515', 'GO:0005488'):
 	        continue
 
 	     # else we want to load this annotation.
