@@ -1,3 +1,9 @@
+TAG: uniprotload-5-0-0-1
+DATE: 04/03/2012
+STAFF: lec
+CHANGES:
+1) TR11030/prevent use of GO:0005488
+
 TAG: uniprotload-4-4-1-8
 TAG: uniprotload-4-4-1-7
 DATE: 03/05/2012
